// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputNumber :props :defaultValue, default value 6 1`] = `
<div
  class="t-input-number t-size-m"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove"
      fill="none"
      height="1em"
      style="font-size: medium;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M3.5 7.35h9v1.3h-9v-1.3z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-input-number-text-align"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add"
      fill="none"
      height="1em"
      style="font-size: medium;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props :disabled, function can not be call 1`] = `
<div
  class="t-input-number t-size-m t-is-disabled"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease t-is-disabled"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove"
      fill="none"
      height="1em"
      style="font-size: medium;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M3.5 7.35h9v1.3h-9v-1.3z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-is-disabled t-input-number-text-align"
      disabled=""
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase t-is-disabled"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add"
      fill="none"
      height="1em"
      style="font-size: medium;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props :format, with 6% 1`] = `
<div
  class="t-input-number t-size-m"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove"
      fill="none"
      height="1em"
      style="font-size: medium;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M3.5 7.35h9v1.3h-9v-1.3z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-input-number-text-align"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add"
      fill="none"
      height="1em"
      style="font-size: medium;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props :max, value 6 < max 10 1`] = `
<div
  class="t-input-number t-size-m"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove"
      fill="none"
      height="1em"
      style="font-size: medium;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M3.5 7.35h9v1.3h-9v-1.3z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-input-number-text-align"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add"
      fill="none"
      height="1em"
      style="font-size: medium;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props :max, value 16 > max 10 1`] = `
<div
  class="t-input-number t-size-m"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease t-is-disabled"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove"
      fill="none"
      height="1em"
      style="font-size: medium;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M3.5 7.35h9v1.3h-9v-1.3z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input t-is-error"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-input-number-text-align"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase t-is-disabled"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add"
      fill="none"
      height="1em"
      style="font-size: medium;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props :min, value -1 < min 1 1`] = `
<div
  class="t-input-number t-size-m"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease t-is-disabled"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove"
      fill="none"
      height="1em"
      style="font-size: medium;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M3.5 7.35h9v1.3h-9v-1.3z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input t-is-error"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-input-number-text-align"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase t-is-disabled"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add"
      fill="none"
      height="1em"
      style="font-size: medium;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props :min, value 6 > min 1 1`] = `
<div
  class="t-input-number t-size-m"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove"
      fill="none"
      height="1em"
      style="font-size: medium;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M3.5 7.35h9v1.3h-9v-1.3z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-input-number-text-align"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add"
      fill="none"
      height="1em"
      style="font-size: medium;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props :mode, without class t-is-controls-right 1`] = `
<div
  class="t-input-number t-size-m"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove"
      fill="none"
      height="1em"
      style="font-size: medium;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M3.5 7.35h9v1.3h-9v-1.3z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-input-number-text-align"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add"
      fill="none"
      height="1em"
      style="font-size: medium;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props :mode:column, with class t-is-controls-right 1`] = `
<div
  class="t-input-number t-size-m t-is-controls-right"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-chevron-down"
      fill="none"
      height="1em"
      style="font-size: medium;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input"
  >
    <input
      autocomplete="off"
      class="t-input__inner"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-chevron-up"
      fill="none"
      height="1em"
      style="font-size: medium;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M12.46 9.54l-.92.92L8 6.92l-3.54 3.54-.92-.92L8 5.08l4.46 4.46z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props :mode:row, without class t-is-controls-right 1`] = `
<div
  class="t-input-number t-size-m"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove"
      fill="none"
      height="1em"
      style="font-size: medium;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M3.5 7.35h9v1.3h-9v-1.3z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-input-number-text-align"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add"
      fill="none"
      height="1em"
      style="font-size: medium;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props :size:large, with class t-size-l 1`] = `
<div
  class="t-input-number t-size-l"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove t-size-l"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M3.5 7.35h9v1.3h-9v-1.3z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-input-number-text-align"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add t-size-l"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props :size:medium, with class t-size-m 1`] = `
<div
  class="t-input-number t-size-m"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove"
      fill="none"
      height="1em"
      style="font-size: medium;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M3.5 7.35h9v1.3h-9v-1.3z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-input-number-text-align"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add"
      fill="none"
      height="1em"
      style="font-size: medium;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props :size:small, with class t-size-s 1`] = `
<div
  class="t-input-number t-size-s"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove t-size-s"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M3.5 7.35h9v1.3h-9v-1.3z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-input-number-text-align"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add t-size-s"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props :step, 2 1`] = `
<div
  class="t-input-number t-size-m"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove"
      fill="none"
      height="1em"
      style="font-size: medium;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M3.5 7.35h9v1.3h-9v-1.3z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-input-number-text-align"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add"
      fill="none"
      height="1em"
      style="font-size: medium;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props :value, 6 1`] = `
<div
  class="t-input-number t-size-m"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove"
      fill="none"
      height="1em"
      style="font-size: medium;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M3.5 7.35h9v1.3h-9v-1.3z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-input-number-text-align"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add"
      fill="none"
      height="1em"
      style="font-size: medium;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props class, with class t-input-number 1`] = `
<div
  class="t-input-number t-size-m"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove"
      fill="none"
      height="1em"
      style="font-size: medium;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M3.5 7.35h9v1.3h-9v-1.3z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-input-number-text-align"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add"
      fill="none"
      height="1em"
      style="font-size: medium;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
    
    
  </button>
</div>
`;
